@@ -78,7 +78,7 @@ public:
 	     28.0 * pow(z[0], 0.8) * pow(z[1], 1.2) );
 
     // Regularization
-    y[1] += (z[0] + z[1]) * (z[0] + z[1]) - 1.0;
+    //y[1] += (z[0] + z[1]) * (z[0] + z[1]) - 1.0;
     //y[1] += (z[0] + z[1]) * (z[0] + z[1]) * (z[0] + z[1]) - 1.0;
   }
 
@@ -98,7 +98,7 @@ public:
       	      33.6 * pow(z[0], 0.8)  * pow(z[1], 0.2)) * x[1] );
 
     // Regularization
-    y[1] += 2.0 * (z[0] + z[1]) * (x[0] + x[1]);
+    //y[1] += 2.0 * (z[0] + z[1]) * (x[0] + x[1]);
     //y[1] += 3.0 * (z[0] + z[1]) * (z[0] + z[1]) * (x[0] + x[1]);
   }
   
